ignored database.yml

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile ~/.gitignore_global
 
+# Ignore the database settings - to protect passwords
+# Developers add their own, capistrano uses shared dir version
+config/database.yml
+
 # Ignore bundler config
 /.bundle
 
