--- a/fixtures/vcr_cassettes/sciencewire_client_spec_returns_empty_array.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_returns_empty_array.yml
@@ -5,20 +5,19 @@ http_interactions:
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
       encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\n\t          <ScienceWireQueryXMLParameter
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n\t
-        \           <xmlQuery><![CDATA[\n\t     <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
-        xmlns:xsd=\"http://www.w3.org/2001/\n\t    XMLSchema\">\n\t      <Criterion
-        ConjunctionOperator=\"AND\">\n\t        <Criteria><Criterion>\n\t            <Filter>\n\t
-        \             <Column>AuthorLastName</Column>\n\t              <Operator>BeginsWith</Operator>\n\t
-        \             <Value>ottawa</Value>\n\t            </Filter>\n\t          </Criterion><Criterion>\n\t
-        \           <Filter>\n\t              <Column>AuthorFirstName</Column>\n\t
-        \             <Operator>BeginsWith</Operator>\n\t              <Value>yukon</Value>\n\t
-        \           </Filter>\n\t          </Criterion></Criteria>\n\t      </Criterion>\n\t
-        \     <Columns>\n\t        <SortColumn>\n\t          <Column>Rank</Column>\n\t
+      string: ! "<?xml version=\"1.0\"?>\n    <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n    <xmlQuery><![CDATA[\n\t
+        \    <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/\n\t
+        \   XMLSchema\">\n\t      <Criterion ConjunctionOperator=\"AND\">\n\t        <Criteria><Criterion>\n\t
+        \           <Filter>\n\t              <Column>AuthorLastName</Column>\n\t
+        \             <Operator>BeginsWith</Operator>\n\t              <Value>ottawa</Value>\n\t
+        \           </Filter>\n\t          </Criterion><Criterion>\n\t            <Filter>\n\t
+        \             <Column>AuthorFirstName</Column>\n\t              <Operator>BeginsWith</Operator>\n\t
+        \             <Value>yukon</Value>\n\t            </Filter>\n\t          </Criterion></Criteria>\n\t
+        \     </Criterion>\n\t      <Columns>\n\t        <SortColumn>\n\t          <Column>Rank</Column>\n\t
         \         <Direction>Descending</Direction>\n\t        </SortColumn>\n\t      </Columns>\n\t
-        \    <MaximumRows>4</MaximumRows>\n\t    </query>\n\t    ]]></xmlQuery>\n\t
-        \         </ScienceWireQueryXMLParameter>"
+        \    <MaximumRows>4</MaximumRows>\n\t    </query>\n\t    ]]></xmlQuery>\n
+        \   </ScienceWireQueryXMLParameter>"
     headers:
       Accept:
       - ! '*/*'
@@ -52,7 +51,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 26 Jun 2013 20:08:15 GMT
+      - Tue, 23 Jul 2013 20:16:20 GMT
       Content-Length:
       - '277'
     body:
@@ -61,7 +60,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>44272</queryID>\r\n
         \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Wed, 26 Jun 2013 20:08:15 GMT
+  recorded_at: Tue, 23 Jul 2013 20:16:21 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/44272?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -99,7 +98,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 26 Jun 2013 20:08:15 GMT
+      - Tue, 23 Jul 2013 20:16:20 GMT
       Content-Length:
       - '148'
     body:
@@ -107,5 +106,5 @@ http_interactions:
       string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" />"
     http_version: 
-  recorded_at: Wed, 26 Jun 2013 20:08:15 GMT
+  recorded_at: Tue, 23 Jul 2013 20:16:21 GMT
 recorded_with: VCR 2.5.0
