--- a/fixtures/vcr_cassettes/pub_med_client_spec_returns_an_empty_array.yml
+++ b/fixtures/vcr_cassettes/pub_med_client_spec_returns_an_empty_array.yml
@@ -17,7 +17,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 26 Jun 2013 20:02:32 GMT
+      - Fri, 26 Jul 2013 22:51:05 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -25,20 +25,20 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 9DFD70E81CB48D81_0305SID
+      - 08DD68261F2FD591_0009SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=9DFD70E81CB48D81_0305SID; domain=.nih.gov; path=/; expires=Thu, 26
-        Jun 2014 20:02:32 GMT
+      - ncbi_sid=08DD68261F2FD591_0009SID; domain=.nih.gov; path=/; expires=Sat, 26
+        Jul 2014 22:51:05 GMT
       Transfer-Encoding:
       - chunked
     body:
       encoding: US-ASCII
       string: ! '<?xml version="1.0"?>
 
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January
-        2013//EN" "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_130101.dtd">
+        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st May 2013//EN"
+        "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_130501.dtd">
 
         <PubmedArticleSet>
 
@@ -47,5 +47,5 @@ http_interactions:
 
 '
     http_version: 
-  recorded_at: Wed, 26 Jun 2013 20:02:33 GMT
+  recorded_at: Fri, 26 Jul 2013 22:51:06 GMT
 recorded_with: VCR 2.5.0
