--- a/config/cap_auth.yaml.example
+++ b/config/cap_auth.yaml.example
@@ -1,20 +1,20 @@
 ---
 :development:
-  :get_token_uri: ***REMOVED***
+  :get_token_uri: something
   :get_token_port: 443
   :get_token_path: /oauth/token
-  ***REMOVED***
-  :get_token_pass: ***REMOVED***
-  :authorship_api_uri: irt-dev.stanford.edu
+  :get_token_user: something
+  :get_token_pass: something
+  :authorship_api_uri: something
   :authorship_api_path: /cap-api-qa/api/cap/v1/authors
   :authorship_api_port: 443
-  :access_token: ***REMOVED***
+  :access_token: something
 :production:
-  :get_token_uri: authz.stanford.edu
+  :get_token_uri: something
   :get_token_port: 443
   :get_token_path: /oauth/token
-  ***REMOVED***
-  :get_token_pass: ***REMOVED***
-  :authorship_api_uri: cap.stanford.edu
+  :get_token_user: something
+  :get_token_pass: something
+  :authorship_api_uri: something
   :authorship_api_path: /cap-api/api/cap/v1/authors
   :authorship_api_port: 443
