--- a/fixtures/vcr_cassettes/sciencewire_client_spec_returns_empty_array.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_returns_empty_array.yml
@@ -1,71 +1,6 @@
 ---
 http_interactions:
 - request:
-    method: post
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
-    body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
-        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery><![CDATA[\n\t
-        \    <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/\n\t
-        \   XMLSchema\">\n\t      <Criterion>\n\t        <Criteria><Criterion>\n\t
-        \           <TextSearch>\n                  <QueryPredicate>(\"ottawa,yukon\"
-        or \"OTTAWA,Y\") and Stanford</QueryPredicate>\n                  <SearchType>ExactMatch</SearchType>\n
-        \                 <Columns>AggregateText</Columns>\n                  <MaximumRows>4</MaximumRows>\n
-        \                 </TextSearch>\n\t          </Criterion><Criterion>\n  \t
-        \           <Filter>\n  \t              <Column>AuthorLastName</Column>\n
-        \ \t              <Operator>BeginsWith</Operator>\n  \t              <Value>OTTAWA</Value>\n
-        \ \t            </Filter>\n  \t          </Criterion><Criterion>\n  \t            <Filter>\n
-        \ \t              <Column>AuthorFirstName</Column>\n  \t              <Operator>BeginsWith</Operator>\n
-        \ \t              <Value>Y</Value>\n  \t            </Filter>\n  \t          </Criterion></Criteria>\n\t
-        \     </Criterion>\n\t      <Columns>\n\t        <SortColumn>\n\t          <Column>Rank</Column>\n\t
-        \         <Direction>Descending</Direction>\n\t        </SortColumn>\n\t      </Columns>\n\t
-        \    <MaximumRows>4</MaximumRows>\n\t    </query>\n\t    ]]></xmlQuery>\n
-        \     </ScienceWireQueryXMLParameter>"
-    headers:
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - Ruby
-      Licenseid:
-      - ***REMOVED***
-      Host:
-      - sciencewirerest.discoverylogic.com
-      Connection:
-      - Keep-Alive
-      Expect:
-      - 100-continue
-      Content-Type:
-      - text/xml
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Cache-Control:
-      - private
-      Content-Type:
-      - application/xml; charset=utf-8
-      Server:
-      - Microsoft-IIS/7.5
-      X-Aspnetmvc-Version:
-      - '2.0'
-      X-Aspnet-Version:
-      - 4.0.30319
-      X-Powered-By:
-      - ASP.NET
-      Date:
-      - Tue, 20 Aug 2013 18:27:47 GMT
-      Content-Length:
-      - '277'
-    body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>94679</queryID>\r\n
-        \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
-    http_version: 
-  recorded_at: Tue, 20 Aug 2013 18:27:48 GMT
-- request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/94679?format=xml&page=0&pageSize=2147483647&v=version/3
     body:
@@ -111,4 +46,119 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" />"
     http_version: 
   recorded_at: Tue, 20 Aug 2013 18:27:48 GMT
+- request:
+    method: post
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery><![CDATA[\n\t
+        \    <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/\n\t
+        \   XMLSchema\">\n\t      <Criterion>\n\t        <Criteria><Criterion>\n\t
+        \           <TextSearch>\n                  <QueryPredicate>(\"ottawa,yukon\"
+        or \"OTTAWA,Y\") and Stanford</QueryPredicate>\n                  <SearchType>ExactMatch</SearchType>\n
+        \                 <Columns>AggregateText</Columns>\n                  <MaximumRows>4</MaximumRows>\n
+        \                 </TextSearch>\n\t          </Criterion><Criterion>\n  \t
+        \           <Filter>\n  \t              <Column>AuthorLastName</Column>\n
+        \ \t              <Operator>BeginsWith</Operator>\n  \t              <Value>OTTAWA</Value>\n
+        \ \t            </Filter>\n  \t          </Criterion><Criterion>\n  \t            <Filter>\n
+        \ \t              <Column>AuthorFirstName</Column>\n  \t              <Operator>BeginsWith</Operator>\n
+        \ \t              <Value>Y</Value>\n  \t            </Filter>\n  \t          </Criterion><Criterion>\n
+        \     \t            <Filter>\n      \t              <Column>DocumentCategory</Column>\n
+        \     \t              <Operator>In</Operator>\n                      <Values>\n
+        \     \t                <Value>Journal Document</Value>\n                        <Value>Conference
+        Proceeding Document</Value>\n                      </Values>\n      \t            </Filter>\n
+        \     \t          </Criterion></Criteria>\n\t      </Criterion>\n\t      <Columns>\n\t
+        \       <SortColumn>\n\t          <Column>Rank</Column>\n\t          <Direction>Descending</Direction>\n\t
+        \       </SortColumn>\n\t      </Columns>\n\t     <MaximumRows>4</MaximumRows>\n\t
+        \   </query>\n\t    ]]></xmlQuery>\n      </ScienceWireQueryXMLParameter>"
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+      Licenseid:
+      - ***REMOVED***
+      Host:
+      - sciencewirerest.discoverylogic.com
+      Connection:
+      - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private
+      Content-Type:
+      - application/xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/7.5
+      X-Aspnetmvc-Version:
+      - '2.0'
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Wed, 04 Sep 2013 23:29:22 GMT
+      Content-Length:
+      - '278'
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>129741</queryID>\r\n
+        \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
+    http_version: 
+  recorded_at: Wed, 04 Sep 2013 23:29:29 GMT
+- request:
+    method: get
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/129741?format=xml&page=0&pageSize=2147483647&v=version/3
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+      Content-Type:
+      - text/xml
+      Licenseid:
+      - ***REMOVED***
+      Host:
+      - sciencewirerest.discoverylogic.com
+      Connection:
+      - Keep-Alive
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private
+      Content-Type:
+      - application/xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/7.5
+      X-Aspnetmvc-Version:
+      - '2.0'
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Wed, 04 Sep 2013 23:29:22 GMT
+      Content-Length:
+      - '148'
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" />"
+    http_version: 
+  recorded_at: Wed, 04 Sep 2013 23:29:29 GMT
 recorded_with: VCR 2.5.0
